# Computer

./: .gitignore
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: brain.rs  config.rs  main.rs  speech.rs
src-tauri/src/abilities/: addition.rs  mod.rs  movies.rs
src-tauri/src/actions/: mod.rs
src-tauri/src/senses/: listen.rs
ui/: package-lock.json  package.json  tsconfig.json
ui/src/app/: globals.css  page.tsx
ui/src/app/brain/: useBrain.tsx
ui/src/app/commands/: useCommands.tsx
ui/src/app/display/: movies.tsx
ui/src/app/pages/: movies.tsx
ui/src/components/: animatedSound.tsx  animatedText.tsx  thinking.tsx
